src/styles/markdown.css
.markdown-content {
    margin: 8px 0;
    overflow-wrap: anywhere;
}

/* Horizontal Rules */
.markdown-content hr {
    border-top-width: 1px;
    color: var(--ion-text-color-step-400);
}

/* Blockquotes */
.markdown-content blockquote {
    border-left: 1px solid var(--ion-text-color-step-400);
    padding-left: 8px;
    margin: 12px;
}

/* Tables */
.markdown-content table {
    border: 1px solid var(--ion-text-color-step-400);
    margin-bottom: 8px;
}

.markdown-content table tr {
    border-bottom: 1px solid var(--ion-text-color-step-400);
}

.markdown-content table th {
    border-left: 1px solid var(--ion-text-color-step-400);
    border-right: 1px solid var(--ion-text-color-step-400);
}

.markdown-content table td {
    border-left: 1px solid var(--ion-text-color-step-400);
    border-right: 1px solid var(--ion-text-color-step-400);
}

.markdown-content table :is(td, th) {
    padding: 8px;
}

/* Headings */
.markdown-content :is(h1, h2, h3, h4, h5, h6, p) {
    margin-top: 0;
    margin-bottom: 0.25rem;
}

.markdown-content h1 {
    font-size: 1.95rem;
}

.markdown-content h2 {
    font-size: 1.625rem;
}

.markdown-content h3 {
    font-size: 1.3rem;
}

.markdown-content h4 {
    font-size: 1.125rem;
}

.markdown-content h5 {
    font-size: 1.0125rem;
}

.markdown-content h6 {
    font-size: 0.9rem;
}

/* Highlight */
.markdown-content mark {
    padding: 2px 4px;
    border-radius: 4px;
    background-color: rgba(var(--ion-color-primary-rgb), 0.40);
    color: var(--ion-text-color);
}

/* Spoilers */
.markdown-content span.spoiler {
    border-radius: 4px;
    padding: 2px 4px;
    background-color: var(--ion-background-color-step-200);
    transition-duration: 250ms;
    transition-timing-function: ease-in-out;
    transition-property: color, background-color;
    color: transparent;
    cursor: pointer;
    user-select: none;
}

.markdown-content span.spoiler * {
    opacity: 0;
    transition-duration: 250ms;
    transition-timing-function: ease-in-out;
    transition-property: opacity;
}

.markdown-content span.spoiler:focus {
    background-color: var(--ion-background-color-step-400);
    color: unset;
    user-select: unset;
    cursor: unset;
}

.markdown-content span.spoiler:focus * {
    opacity: unset;
}

/* Timestamp */
.markdown-content span.timestamp {
    border-radius: 4px;
    padding: 2px 4px;
    background-color: var(--ion-background-color-step-150);
}

.markdown-content span.timestamp::before {
    content: "\A";
    mask-image: url(/node_modules/@material-symbols/svg-600/outlined/nest_clock_farsight_analog.svg);
    background-color: var(--ion-text-color);
    mask-size: contain;
    mask-repeat: no-repeat;
    display: inline-block;
    width: 1.3em;
    height: 1.3em;
    aspect-ratio: 1;
    vertical-align: text-bottom;
    padding-right: 4px;
}

.markdown-content span.color::before {
    content: "\A";
    display: inline-block;
    aspect-ratio: 1;
    width: .8em;
    margin-inline-end: 0.25em;
    border-radius: 100%;
    background-color: var(--color);
    vertical-align: baseline;
}

.markdown-content span.text-color-legacy {
    background: linear-gradient(to right, var(--markdown-text-color-start), var(--markdown-text-color-end));
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;
}

.markdown-content span.text-color-bg-legacy {
    border-radius: 4px;
    padding: 2px 4px;
    background: linear-gradient(to right, var(--markdown-bg-color-start), var(--markdown-bg-color-end));
}

.markdown-content span.text-color-fg-one {
    color: var(--markdown-text-colors);
}

.markdown-content span.text-color-fg {
    background: linear-gradient(to right, var(--markdown-text-colors));
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;
}

.markdown-content span.text-color-bg {
    border-radius: 4px;
    padding: 2px 4px;
    background: linear-gradient(to right, var(--markdown-text-bg-colors));
}

.markdown-content span.text-shadow {
    text-shadow: var(--markdown-text-shadow);
}

.markdown-content span.text-border {
    border: var(--markdown-text-border);
    border-radius: 4px;
    padding: 2px 4px;
    display: inline-block;
}

.markdown-content span.center {
    display: block;
    text-align: center;
}

.markdown-content span.blur {
    filter: blur(4px);
    cursor: pointer;
    user-select: none;
    transition-duration: 250ms;
    transition-timing-function: ease-in-out;
    transition-property: filter;
}

.markdown-content span.blur:focus {
    filter: blur(0);
    user-select: unset;
    cursor: unset;
}

.markdown-content ul {
    padding-inline-start: 1em;
}

.markdown-content ul li span ion-checkbox {
    width: min-content;
    --size: 1em;
    height: 1em;
    margin-inline-end: 0.5em;
}

.markdown-content div.callout {
    display: block;
    border: 2px solid color-mix(in srgb, var(--markdown-callout-color, var(--ion-color-primary)) 30%, transparent);
    background: color-mix(in srgb, var(--markdown-callout-color, var(--ion-color-primary)) 15%, transparent);
    margin: 8px 0;
    padding: 8px 12px;
    border-radius: 12px;
}

.markdown-content span.callout-title {
    display: block;
    color: var(--markdown-callout-color, var(--ion-color-primary));
    margin-bottom: 8px;
    font-weight: bold;
}

.markdown-content ion-icon {
    height: 1em;
    vertical-align: middle;
}

